# Template-Assembly

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  AddTemplateAssembly.cmake  Addtasm.cmake  CMakeLists.txt  CONTRIBUTING.md  README.md  index.js  instr.h  package.json
cmake/: AddCatch.cmake  CheckCompilerFlags.cmake  EnableCoverageReport.cmake  EnableTests.cmake  FindLcov.cmake  FindValgrind.cmake  Findgcovr.cmake  GenerateValgrind.cmake
generate_instructions/: generate.js  index.js  instr.h  x86_64.xml
include/: asm.h  asm_monad.h  byte_string.h  bytes.h  encoding.h  execute.h  foldable.h  functor.h  immediate.h  instr.h  instruction.h  label.h  list.h  memory.h  register.h  state.h  symbol_table.h  utility.h
include/tasm/: asm.h  bytes.h  encoding.h  execute.h  foldable.h  functor.h  immediate.h  instruction.h  label.h  list.h  memory.h  state.h  symbol_table.h  utility.h
include/tasm/isa/: x86.h
include/tasm/private/: encoding.h  execute.h  foldable.h  functor.h  immediate.h  instruction.h  label.h  list.h  memory.h  state.h  symbol_table.h
instructions-set/: instr.h
src/: memory.h  register.h  state.h
template assembly/: asm.h  asm_monad.h  assert.h  byte_string.h  encoding.h  foldable.h  functor.h  immediate.h  instr.h  instruction.h  label.h  list.h  main  main.cpp  map.h  memory.h  modrm.h  register.h  state.h  string.h  symbol_table.h  utility.h
template assembly.xcodeproj/: project.pbxproj
template assembly.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/: compile_test.cpp  main.cpp  test.cpp
